# ailang-lang-AILang

./: .gitattributes  .gitignore  AGENTS.md  ARTIFACT_VERIFICATION_REPORT.md  AUDIT_REPORT.md  AUTHORS.md  BENCHMARK_VALIDATION_REPORT.md  BEST_PRACTICES.md  BUILD_PROVENANCE_REPORT.md  CHANGELOG.md  CHANGELOG_v1.1.2.md  CI_VALIDATION_REPORT.md  CLI_CONSISTENCY_REPORT.md  CLI_DISCOVERABILITY_REPORT.md  CLI_DOCUMENTATION_AUDIT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_STATUS.md  DIAGNOSTICS_PRIVACY_REPORT.md  DOCUMENTATION_AUDIT_REPORT.md  DOCUMENTATION_FIX_REPORT.md  DOCUMENTATION_SYNC_REPORT.md  DOCUMENTATION_VERIFICATION_REPORT.md  DX_AUDIT_REPORT.md  DX_TOOL_001_REPORT.md  DX_TOOL_002_REPORT.md  ENGINEERING_EVIDENCE_REPORT.md  ENGINEERING_EVIDENCE_REPORT_v0.8.0.md  EXAMPLES_REMEDIATION_REPORT.md  EXAMPLE_USABILITY_REPORT.md  EXAMPLE_VALIDATION_REPORT.md  FINAL_ONBOARDING_RECOMMENDATION.md  FINAL_RELEASE_CHECKLIST.md  FINAL_RELEASE_READINESS_REPORT.md  FINAL_STATUS.md  FINAL_VALIDATION_REPORT.md  FORMATTER_FIX_REPORT.md  IMPLEMENTATION_PLAN.md  LANGUAGE_SPEC.md  LICENSE  (+95 more)
.github/: PULL_REQUEST_TEMPLATE.md
ai_validation/: arithmetic.ail  functions.ail  hello.ail  if_else.ail  recursion.ail  variables.ail
ail_platform/: __init__.py  configuration.py  diagnostics.py  events.py  manifest.py  project.py  report_schema.py  symbol_index.py  workspace.py
backups/: 1784042154.json  1784042726.json  auto_adjustments.json  auto_audit_log.json  auto_batches.json  auto_categories.json  auto_currency_rates.json  auto_customers.json  auto_invoices.json  auto_movements.json  auto_payments.json  auto_permissions.json  auto_price_history.json  auto_products.json  auto_purchase_items.json  auto_purchase_orders.json  auto_reorder_levels.json  auto_reorder_notifications.json  auto_reservations.json  auto_returns.json  auto_sales_items.json  auto_sales_orders.json  auto_serial_numbers.json  auto_shipments.json  auto_stock_aging.json  auto_suppliers.json  auto_tax_rates.json  auto_transfer_integrations.json  auto_transfers.json  auto_valuations.json  auto_vendors.json  auto_warehouses.json  auto_workflows.json
benchmarks/: __init__.py  __main__.py  setup.py
compiler/: __init__.py  __main__.py  _version.py  diagnostics.py  exceptions.py  formatter.py  lexer.py  parser.py  rename.py  source.py  watch.py
data/: adjustments.json  audit_log.json  batches.json  categories.json  comments.json  currency_rates.json  customers.json  expenses.csv  expenses.json  inventory.json  invoices.json  movements.json  payments.json  permissions.json  price_history.json  products.json  purchase_items.json  purchase_orders.json  reorder_levels.json  reorder_notifications.json  reservations.json  returns.json  sales_items.json  sales_orders.json  serial_numbers.json  shipments.json  stock_aging.json  suppliers.json  tax_rates.json  todos.json  transfer_integrations.json  transfers.json  users.json  valuations.json  vendors.json  warehouses.json  workflows.json
demo/: README.md  ail.toml  main.ail
docs/: ADR-003-stdlib-loading.md  AILANG_BENCHMARK_WHITEPAPER.md  AILANG_DEVELOPMENT_PLAYBOOK.md  AI_BENCHMARK_MATRIX.md  AI_DEVELOPER_GUIDE.md  APPLICATION_ANALYSIS.md  COMPATIBILITY.md  CURRENT_MILESTONE.md  DIAGNOSTICS_REVIEW.md  DOCUMENTATION_AUDIT.md  ENGINEERING_BENCHMARK_PLAN.md  FOLDER_STRUCTURE.md  HYPOTHESIS_STATUS.md  INDEX.md  LANGUAGE_TOUR.md  MASTER_ENGINEERING_PROMPT.md  MEMBER_ACCESS.md  OPERATIONAL_EVIDENCE.md  PACKAGES.md  PACKAGE_NAMING_POLICY.md  PHASE_10_REPORT.md  PRODUCT_ROADMAP.md  PROJECT_CONSTITUTION.md  PROJECT_PHASE.md  PROJECT_VISION.md  PUBLIC_API_AUDIT.md  QUICKSTART.md  ROADMAP.md  STDLIB_GAP_ANALYSIS_v2.md  STDLIB_REFERENCE.md  requirements_v1.md
examples/: README.md  chained_member_access.ail  collections.ail  csv_demo.ail  env_demo.ail  file_io.ail  if_else.ail  json_demo.ail  member_access.ail  member_function_calls.ail  path_ops.ail  random_demo.ail  root_main_example.ail  root_product_example.ail  string_utils.ail  time_demo.ail  variables.ail
imports/: test_header_only.csv  test_products.csv
qa_tests/: 01_scoping.ail  02_shadowing.ail  03_nested_blocks.ail  04_deep_recursion.ail  05_mutual_recursion.ail  06_params_return.ail  07_list_ops.ail  08_map_ops.ail  09_json.ail  10_csv.ail  11_imports.ail  12_runtime_errors.ail  13_bool_edge.ail  14_string_ops.ail  15_invalid_syntax.ail  BUG_REPORT.md  IMPACT_ANALYSIS.md  MINIMAL_REPRODUCERS.ail  REGRESSION_TEST.md  edge_io.ail  (+32 more)
(+1128 files in other folders)
