[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ailang"
version = "0.2.0"
description = "AI-first programming language compiler"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-timeout>=2",
    "black>=24",
    "ruff>=0.4",
    "mypy>=1" 
]

[project.scripts]
ail = "compiler.cli.main:main"

[tool.setuptools.packages.find]
include = ["compiler*", "stdlib*"]

[tool.setuptools.package-data]
compiler = ["py.typed"]
stdlib = ["*.ail"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["compiler"]
