[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ailang"
version = "0.10.0"
description = "AI-first programming language compiler"
requires-python = ">=3.11"
dependencies = ["watchdog>=4.0"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-timeout>=2",
    "black>=24",
    "ruff>=0.4",
    "mypy>=1" 
]
openai = ["openai>=1.0", "tiktoken>=0.5"]
anthropic = ["anthropic>=0.30"]
google = ["google-generativeai>=0.4"]
local = ["openai>=1.0"]
all = [
    "openai>=1.0",
    "tiktoken>=0.5",
    "anthropic>=0.30",
    "google-generativeai>=0.4",
]

[project.scripts]
ail = "compiler.cli.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["compiler*", "stdlib*", "tools*", "ail_platform*"]

[tool.setuptools.package-data]
compiler = ["py.typed"]
stdlib = ["*.ail"]

[tool.pytest.ini_options]
testpaths = ["tests", "benchmarks/tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["compiler"]
