[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ailang-lang"
version = "1.0.9"
description = "Deterministic business application platform optimized for AI-assisted development"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["watchdog>=4.0"]

authors = [
    { name = "AILang Contributors" }
]

license = { text = "Apache-2.0" }

keywords = [
    "programming-language",
    "compiler",
    "ai",
    "business-applications",
    "deterministic"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Compilers",
]

[project.urls]
Homepage = "https://github.com/akpersonal4/ailang-lang-AILang"
Repository = "https://github.com/akpersonal4/ailang-lang-AILang"
Documentation = "https://github.com/akpersonal4/ailang-lang-AILang/tree/main/docs"
Issues = "https://github.com/akpersonal4/ailang-lang-AILang/issues"
Changelog = "https://github.com/akpersonal4/ailang-lang-AILang/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-timeout>=2",
    "black>=24",
    "ruff>=0.4",
    "mypy>=1" 
]
openai = ["openai>=1.0", "tiktoken>=0.5"]
anthropic = ["anthropic>=0.30"]
google = ["google-generativeai>=0.4"]
local = ["openai>=1.0"]
all = [
    "openai>=1.0",
    "tiktoken>=0.5",
    "anthropic>=0.30",
    "google-generativeai>=0.4",
]

[project.scripts]
ail = "compiler.cli.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["compiler*", "stdlib*", "tools*", "ail_platform*"]

[tool.setuptools.package-data]
compiler = ["py.typed", "docs/*.md"]
stdlib = ["*.ail"]

[tool.pytest.ini_options]
testpaths = ["tests", "benchmarks/tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["compiler"]
